boardgames/src/components/yahtzee/Yahtzee.css
.dice-container {
    background-color: green;
    margin-left: 90px;
    display: flex;
    justify-content: center;
    gap: 20px;
    margin-bottom: 30px;
}

.dice-face {
    width: 50px;
    height: 50px;
    border: 2px solid black;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 12px;
    color: black;
    background-color: ghostwhite;
    border-radius: 10px;
}

.score-container{
  margin-left: 30px;
  float: left;
  width: 120px;
  padding: 10px;  
  p{
    width:120px;
  border: black 1px solid;
  text-align: center; 
  ;
    }
}

.roll-dice {
    margin-left: 210px;
    border: black 3px solid;
    background-color: whitesmoke;
    width: 85px;
    text-align: center;
    border-radius: 10px;
}

.take-score {

    margin-left: 275px;
    border: black 3px solid;
    background-color: whitesmoke;
    width: 85px;
    text-align: center;
    border-radius: 10px;
}

